syntax = "proto3";
package service.grpc;


option java_package = "com.proto.service";
option java_multiple_files = true;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Key{
  string key = 1;
}
message DataChunk{
  bytes data = 1;
  int32 size = 2;
}

message UploadRequest{
  DataChunk data = 1;
  Key key = 2;
}

message UploadResponse{
  Key key = 1;
}

message DownloadRequest{
  Key key = 1;
}

message DownloadResponse{
  DataChunk data = 1;
}

message DeleteRequest{
  Key key = 1;
}

message DeleteResponse{
  Key key = 1;
}

message ImageMetaData{
  string key = 1;
  string value = 2;
}

message BatchUploadRequest{
  repeated UploadRequest uploadRequests = 1;
}

message BatchUploadResponse{
  repeated UploadResponse uploadResponse = 1;
}

message ImageResponse{
  DataChunk dataChunk = 1;
  Key key = 2;
}

message DownloadAllImagesResponse{
  repeated ImageResponse imageResponse = 1;
  string last_id = 2;
}

message DownloadAllImagesRequest{
  string start_id = 1;
  string page_size = 2;
}

message MetaDataRequest{
  Key key = 1;
}

message MetaDataResponse{
  repeated ImageMetaData metaData = 1;
}