syntax = "proto3";
package service.grpc;

option java_package = "com.proto.service";
option java_multiple_files = true;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "entities.proto";


service VideoService{
  rpc upload(UploadRequest) returns (UploadResponse);
  rpc download(DownloadRequest) returns (DownloadResponse);
  rpc downloadStream(DownloadRequest) returns (stream DownloadResponse);
  rpc uploadStream(stream UploadRequest) returns (UploadResponse);
  rpc deleteVideo(DeleteRequest) returns (DeleteResponse);
  rpc batchUploadVideo(BatchUploadRequest) returns (BatchUploadResponse);
  //todo add get meta for videos
}